--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "postcss": "^8.4.14",
+    "postcss-scss": "^4.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -24,12 +26,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-nested": "^5.0.6",
     "prettier": "^2.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   },
