--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.6.3",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^2.9.9"
   },
   "husky": {
